# schema/openapi.yaml
@@ -8,6 +8,9 @@ components:
   schemas:
     Client:
       type: object
+      required:
+        - id
+        - name
       properties:
         id:
           type: string
@@ -25,6 +28,9 @@ components:
 
     Provider:
       type: object
+      required:
+        - id
+        - name
       properties:
         id:
           type: string
@@ -42,6 +48,10 @@ components:
 
     Availability:
       type: object
+      required:
+        - provider_id
+        - start_time
+        - end_time
       properties:
         provider_id:
           type: string
